@@ -1,6 +1,5 @@
 package uk.gov.hmcts.ccd;
 
-import com.hazelcast.config.EvictionPolicy;
 import org.springframework.beans.factory.annotation.Value;
 import uk.gov.hmcts.ccd.endpoint.exceptions.ServiceException;
 
@@ -8,11 +7,10 @@ import javax.inject.Named;
 import javax.inject.Singleton;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.Base64;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @Named
 @Singleton
@@ -120,9 +118,6 @@ public class ApplicationParams {
     @Value("${default.cache.max.size}")
     private Integer defaultCacheMaxSize;
 
-    @Value("${default.cache.eviction.policy}")
-    private EvictionPolicy defaultCacheEvictionPolicy;
-
     @Value("#{'${search.elastic.hosts}'.split(',')}")
     private List<String> elasticSearchHosts;
 
@@ -186,6 +181,9 @@ public class ApplicationParams {
     @Value("${enable-case-users-db-sync}")
     private boolean enableCaseUsersDbSync;
 
+    @Value("#{'${ccd.upload-timestamp-featured-case-types}'.split(',')}")
+    private List<String> uploadTimestampFeaturedCaseTypes;
+
     @Value("${audit.log.enabled:true}")
     private boolean auditLogEnabled;
 
@@ -231,6 +229,12 @@ public class ApplicationParams {
     @Value("${search.internal.case-access-metadata.enabled}")
     private boolean internalSearchCaseAccessMetadataEnabled;
 
+    @Value("${enable-case-group-access-filtering}")
+    private boolean enableCaseGroupAccessFiltering;
+
+    @Value("#{'${ccd.callback.passthru-header-contexts}'.split(',')}")
+    private List<String> callbackPassthruHeaderContexts;
+
     public static String encode(final String stringToEncode) {
         try {
             return URLEncoder.encode(stringToEncode, "UTF-8");
@@ -240,11 +244,7 @@ public class ApplicationParams {
     }
 
     public static String encodeBase64(final String stringToEncode) {
-        try {
-            return Base64.getEncoder().encodeToString(stringToEncode.getBytes("UTF-8"));
-        } catch (UnsupportedEncodingException e) {
-            throw new ServiceException(e.getMessage());
-        }
+        return Base64.getEncoder().encodeToString(stringToEncode.getBytes(StandardCharsets.UTF_8));
     }
 
     public List<String> getAuthorisedServicesForCaseUserRoles() {
@@ -433,10 +433,6 @@ public class ApplicationParams {
         return defaultCacheMaxSize;
     }
 
-    public EvictionPolicy getDefaultCacheEvictionPolicy() {
-        return defaultCacheEvictionPolicy;
-    }
-
     public List<String> getSearchBlackList() {
         return searchBlackList;
     }
@@ -454,7 +450,8 @@ public class ApplicationParams {
     }
 
     public List<String> getElasticSearchDataHosts() {
-        return elasticSearchDataHosts.stream().map(quotedHost -> quotedHost.replace("\"", "")).collect(toList());
+        return elasticSearchDataHosts.stream().map(quotedHost ->
+            quotedHost.replace("\"", "")).toList();
     }
 
     public Boolean isElasticsearchNodeDiscoveryEnabled() {
@@ -623,5 +620,21 @@ public class ApplicationParams {
 
     public boolean getInternalSearchCaseAccessMetadataEnabled() {
         return internalSearchCaseAccessMetadataEnabled;
+    }
+
+    public boolean getCaseGroupAccessFilteringEnabled() {
+        return this.enableCaseGroupAccessFiltering;
+    }
+
+    public void setCaseGroupAccessFilteringEnabled(boolean enableCaseGroupAccessFiltering) {
+        this.enableCaseGroupAccessFiltering = enableCaseGroupAccessFiltering;
+    }
+
+    public List<String> getCallbackPassthruHeaderContexts() {
+        return callbackPassthruHeaderContexts;
+    }
+
+    public List<String> getUploadTimestampFeaturedCaseTypes() {
+        return uploadTimestampFeaturedCaseTypes;
     }
 }
